assets/css/style.css
* {
    color: #444;
    font-family: 'Roboto', sans-serif;
    -webkit-font-smoothing: antialiased;
}

a {
    font-family: inherit;
}

body {
    width: 100%;
    height: 100%;
}

footer {
    padding: 35px 0;
}

h1 {
    font-size: 36px;
}

h1, h2, h3 {
    margin-top: 20px;
    margin-bottom: 10px;
}

h1, h2, h3, h4, h5, h6 {
    color: inherit;
    font-family: 'Abel', sans-serif;
    font-weight: 500;
    line-height: 1.1;
}

header {
    width: 100%;
    height: 100%;
    background: #5289c5;
}

header > * {
    animation: bounce 1s;
    -moz-animation: bounce 1s;
    -webkit-animation: bounce 1s;
}

html {
    width: 100%;
    height: 100%;
    background-color: #fafafa;
}

img {
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;

}

main {
    background-color: white;
}

p {
    color: #767676;
    font-size: 16px;
    line-height: 24px;
    margin: 0 0 10px;
}

.align-center {
    text-align: center;
}

.align-right {
    text-align: right;
}

.android {
    width: 90%;
    display: inline-block;
}

.badge {
    background: none;
    display: inline-block;
    font-size: 12px;
    min-width: 10px;
    padding: 3px 7px;
    text-align: center;
    vertical-align: middle;
    width: 6em;
}

.block {
    padding-bottom: 50px;
    padding-top: 50px;
}

.button, .button:focus:not(:active) {
    background-color: #4caf50;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    color: white;
    display: inline-block;
    font-family: inherit;
    font-weight: bold;
    padding: 14px;
    text-decoration: none;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.button:active {
    background-color: #43a047;
    color: white;
    text-decoration: none;
}

.button:hover:not(:active) {
    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    color: white;
    text-decoration: none;
    transform: scale(1.08);
    -moz-transform: scale(1.08);
    -ms-transform: scale(1.08);
    -webkit-transform: scale(1.08);
}

.card {
    background-color: white;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    display: inline-block;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    margin: 12px 0;
    padding: 14px;
    text-align: center;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.card:hover {
    box-shadow: 0 14px 15px rgba(0, 0, 0, 0.10), 0 10px 10px rgba(0, 0, 0, 0.22);
    -moz-box-shadow: 0 14px 15px rgba(0, 0, 0, 0.10), 0 10px 10px rgba(0, 0, 0, 0.22);
    -webkit-box-shadow: 0 14px 15px rgba(0, 0, 0, 0.10), 0 10px 10px rgba(0, 0, 0, 0.22);
    transform: scale(1.01);
    -moz-transform: scale(1.01);
    -ms-transform: scale(1.01);
    -webkit-transform: scale(1.01);
}

.card-color {
    border-radius: 2px 2px 0 0;
    -moz-border-radius: 2px 2px 0 0;
    -webkit-border-radius: 2px 2px 0 0;
    margin: -14px -14px 14px -14px;
    padding: 16px;
}

.card-color-blue {
    background-color: #2196f3;
}

.card-color-red {
    background-color: #f44336;
}

.card-color-yellow {
    background-color: #fdd835;
}

.center {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
}

.col-center {
    display: inline-block;
    float: none;
    vertical-align: middle;
}

.demo {
    margin: 12px 0;
}

.demo-overlay {
    width: 84%;
    height: 78.5%;
    z-index: 10;
}

.demo-wrapper {
    width: 68%;
    margin: 0 auto;
}

.fade-down {
    animation: fade-down 1s;
    -moz-animation: fade-down 1s;
    -webkit-animation: fade-down 1s;
}

.flex {
    width: 100%;
    height: 100%;
    align-items: center;
    -webkit-align-items: center;
    -moz-box-align: center;
    -webkit-box-align: center;
    display: flex;
    display: -ms-flexbox;
    display: -webkit-flex;
    -ms-flex-align: center;
    justify-content: center;
}

.fill-screen {
    width: 100%;
    height: 100%;
}

.popup {
    background-color: #424242;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    display: inline-block;
    right: 0;
    margin: 12px 0;
    opacity: 0;
    padding: 14px;
    position: absolute;
    text-align: center;
    top: 20px;
    transform: scale(0.6) translateX(30%);
    -moz-transform: scale(0.6) translateX(30%);
    -ms-transform: scale(0.6) translateX(30%);
    -webkit-transform: scale(0.6) translateX(30%);
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.popup * {
    color: white;
    white-space: nowrap;
}

.popup-wrapper {
    position: relative;
}

.popup-wrapper .button:hover ~ .popup {
    opacity: 1;
    top: 35px;
    transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    -webkit-transform: scale(1);
}

.progress {
    margin-left: 20px;
    transform: translateZ(0);
}

.progress-bar {
    background-color: #0277BD;
}

.relative {
    position: relative;
}

.remove-margins {
    margin: 0;
}

.row-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.scroll-background-small, .scroll-background-large {
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.08);
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    opacity: 0;
    position: absolute;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.scroll-icon {
    width: 2em;
    height: 2em;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.scroll-wrapper {
    width: 2em;
    height: 2em;
    bottom: 50px;
    left: 50%;
    position: absolute;
    transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    -webkit-transform: translate(-50%, 0);
}

.scroll-wrapper:hover .scroll-background-small {
    opacity: 1;
    transform: scale(2);
    -moz-transform: scale(2);
    -ms-transform: scale(2);
    -webkit-transform: scale(2);
    transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
}

.scroll-wrapper:hover .scroll-background-large {
    opacity: 1;
    transform: scale(2.5);
    -moz-transform: scale(2.5);
    -ms-transform: scale(2.5);
    -webkit-transform: scale(2.5);
}

.spacer-horizontal {
    display: inline;
    margin-left: 15px;
}

.spacer-vertical {
    margin-top: 30px;
}

.stretch {
    width: 100%;
}

.text-emphasis {
    color: inherit;
    font-family: inherit;
    font-weight: bold;
}

.text-inline {
    display: inline;
}

.text-white {
    color: white;
}

.tint {
    background-color: #fafafa;
}

.title {
    font-size: 100px;
    font-weight: 900;
}

@keyframes bounce {
    0% {
        opacity: 0;
        transform: translateY(200px);
    }
    25% {
        transform: translateY(-50px);
    }
    50% {
        transform: translateY(15px);
    }
    75% {
        transform: translateY(-8px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@-moz-keyframes bounce {
    0% {
        opacity: 0;
        transform: translateY(200px);
    }
    25% {
        transform: translateY(-50px);
    }
    50% {
        transform: translateY(15px);
    }
    75% {
        transform: translateY(-8px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@-ms-keyframes bounce {
    0% {
        opacity: 0;
        transform: translateY(200px);
    }
    25% {
        transform: translateY(-50px);
    }
    50% {
        transform: translateY(15px);
    }
    75% {
        transform: translateY(-8px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@-webkit-keyframes bounce {
    0% {
        opacity: 0;
        transform: translateY(200px);
    }
    25% {
        transform: translateY(-50px);
    }
    50% {
        transform: translateY(15px);
    }
    75% {
        transform: translateY(-8px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@media (max-width: 1199px) {
    .android {
        width: 100%;
    }

    .demo-wrapper {
        width: 82%;
    }
}

@media (max-width: 991px) {
    .demo-wrapper {
        width: 100%;
    }

    .title {
        font-size: 80px;
    }
}

@media (max-width: 767px) {
    footer p {
        text-align: center;
    }

    footer .align-right {
        text-align: center;
    }

    .android {
        width: 50%;
    }

    .card:hover {
        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        transform: scale(1);
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -webkit-transform: scale(1);
    }

    .container {
        max-width: 500px;
    }

    .popup {
        left: 0;
        right: auto;
        transform: scale(0.6) translateX(-30%);
        -moz-transform: scale(0.6) translateX(-30%);
        -ms-transform: scale(0.6) translateX(-30%);
        -webkit-transform: scale(0.6) translateX(-30%);
    }

    .slide {
        opacity: 1;
    }

    .slide-animation {
        animation: slide 0s;
        -moz-animation: slide 0s;
        -webkit-animation: slide 0s;
    }

    .title {
        font-size: 60px;
    }
}

@media (max-width: 543px) {
    .button {
        width: 100%;
        text-align: center;
    }

    .button:hover:not(:active) {
        background-color: #66BB6A;
        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        transform: scale(1);
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -webkit-transform: scale(1);
    }

    .popup {
        display: none;
    }

    .scroll-background-small, .scroll-background-large {
        display: none;
    }
}

